--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.6",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.0",
     "headlessui": "^0.0.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-currency-input-field": "^3.10.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
@@ -28,7 +34,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
-    "tailwindcss": "^4.1.6",
+    "tailwindcss": "^4.1.11",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
