--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
